--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1214,8 +1214,12 @@ html{
     height: 64px;
     width: 64px;
     position: absolute;
-    left: 10%;
+    left: 30%;
     animation: ride 2s;
+    @media screen and (min-width: 800px) {
+      height: 84px;
+      width: 84px;
+    }
   }
 }
 .icons-center{
@@ -2060,9 +2064,13 @@ margin-bottom: 20px;
   border-radius:10px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   margin-bottom: 10px;
+  height: 200px;
   &__title{
     text-align: center;
     font-weight: 600;
+    @media screen and (min-width: 800px) {
+      font-size: 20px;
+  }
   }
   &__content{
     display: flex;
@@ -2071,10 +2079,28 @@ margin-bottom: 20px;
   &__left{
     display: flex;
     align-items: center;
+    height: 150px;
+  }
+  &__center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 .delivery-time-text{
   padding: 40px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  @media screen and (min-width: 800px) {
+      padding: 0;
+      font-size: 36px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
 }
 .summary{
   position: fixed;
@@ -2584,15 +2610,16 @@ justify-content: space-between;
     height: 350px;
   }
 }
+
 @keyframes ride {
   0%{
-    left: 5%;
+    left: 20%;
   }
-  50%{
-    left: 10%;
-  }
+  // 50%{
+  //   left: 35%;
+  // }
   100%{
-    left: 10%;
+    left: 30%;
   }
 }
 
