--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -768,7 +768,7 @@ html{
   @media screen and (min-width: 800px) { /* jeśli szerokość jest większa od 800px */
     position: absolute;
     top: 0%;
-    left: 15%;
+    left: 20%;
     font-size: 80px;
     // transform: translate(-50%);
     
@@ -795,7 +795,7 @@ html{
   @media screen and (min-width: 800px) { /* jeśli szerokość jest większa od 800px */
     position: absolute;
     // width: 90%;
-    left: 82%;
+    left: 78%;
     top: 4%;
     // transform: translate(-50%);
     }
@@ -846,7 +846,7 @@ html{
   @media screen and (min-width: 800px) { /* jeśli szerokość jest większa od 800px */
     position: absolute;
     top: 5%;
-    right: 22%;
+    right: 25%;
     // transform: translate(-50%);
     }
 }
@@ -925,7 +925,7 @@ html{
 &__counter{
   position: absolute;
   top: 7%;
-  right: 21%;
+  right: 24%;
   // border: 1px solid white;
   border-radius: 50%;
   padding: 4px;
@@ -1063,7 +1063,7 @@ html{
       align-items: center;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
       @media screen and (min-width: 800px) {
-        width: 27%;
+        width: 50%;
     }
     }
   }
@@ -1086,7 +1086,7 @@ html{
       align-items: center;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
       @media screen and (min-width: 800px) {
-          width: 27%;
+        width: 50%
       }
 
     }
@@ -1527,6 +1527,11 @@ html{
   padding: 4px;
   // transition: ease-in 0.2s all;
 }
+.form-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .input-form{
   margin: 20px 0px;
   padding: 0px 10px;
@@ -1804,6 +1809,29 @@ margin-bottom: 20px;
   display: flex;
   justify-content: center;
 }
+}
+.method-at-location{
+
+  margin: 20px 0px 40px 0px;
+  display: flex;
+  justify-content: center;
+  &__box{
+    background: #ff6565;
+    display: flex;
+    justify-content: center;
+    border-radius: 12px;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    padding: 20px 0px;
+  }
+  &__text{
+    color: black;
+    padding: 4px 2px;
+    padding-bottom: 10px;
+    &--header{
+      font-size: 21px;
+    }
+  }
 }
 .action-button{
   background: white;
@@ -2125,7 +2153,7 @@ margin-bottom: 20px;
   @media screen and (min-width:800px) {
     top: 20%;
     left: 50%;
-    width: 500px;
+    width: 450px;
     height: 20%;
   }
   &__close{
@@ -2151,6 +2179,11 @@ margin-bottom: 20px;
     text-align: left;
     text-align: center;
     font-size: 16px;
+    @media screen and (min-width:800px) {
+      padding: 6px;
+      font-size: 18px;
+      font-weight: 300;
+    }
   }
   &__items{
     display: flex;
