--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -758,6 +758,10 @@ html{
     transition: opacity 0.2s ease-in;
   }
 }
+.baker{
+  width: 70px;
+  height: 80px;
+}
 .logo{
   position: absolute;
   top: 2%;
@@ -1623,6 +1627,16 @@ html{
     // color: black;
   }
 }
+.advertisement{
+    height: 150px;
+    background: #FF3D3D;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    &__image{
+      height: 100%;
+      width: 100%;
+    }
+}
 .your-order{
   position: sticky;
   bottom: 0;
@@ -1633,7 +1647,7 @@ html{
   border-top-right-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.60) 5px 0px 15px;
   cursor: pointer;
-  height: 60px;
+  height: 70px;
   transition: all 0.7s ease-in;
   @media screen and (min-width: 800px) {
     width: 90%;
@@ -2128,6 +2142,14 @@ margin-bottom: 20px;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+  }
+}
+.no-payments{
+  color: black;
+  font-size: 18px;
+  @media screen and (min-width: 800px) {
+    
+    font-size: 20px;
   }
 }
 .summary{
