--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1650,26 +1650,35 @@ html{
     // color: black;
   }
 }
+.none-ad{
+  display: none;
+  @media screen and (min-width: 800px) {
+    display: block;
+  }
+}
 .advertisement{
     height: 180px;
     background: #FF3D3D;
     border-radius: 12px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    
+    // overflow-y: scroll;
     @media screen and (min-width: 800px) {
-      height: 390px;
+      height: 260px;
     }
     &__image{
       height: 100%;
       width: 100%;
       border-radius: 12px;
       filter: brightness(70%);
+      &:hover{
+        filter: brightness(100%);
+      }
     }
     &__text{
       background: #FF3D3D;
-      margin-top: -50px;
+      margin-top: -60px;
       position: absolute;
-      width: 70%;
+      width: 80%;
       border-bottom-right-radius: 12px;
       border-top-right-radius: 12px;
       color: white;
@@ -1677,8 +1686,21 @@ html{
       font-size: 14px;
       opacity: 0.9;
       @media screen and (min-width: 800px) {
-        height: 40px;
-        font-size: 23px;
+        width: 70%;
+      }
+      &--right{
+        display: flex;
+        justify-content: right;
+        border-bottom-left-radius: 12px;
+        border-top-left-radius: 12px;
+        border-bottom-right-radius: 0px;
+        border-top-right-radius: 0px;
+
+      }
+      @media screen and (min-width: 800px) {
+        height: 50px;
+        width: 30%;
+        font-size: 16px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -1686,7 +1708,9 @@ html{
     }
     &__center{
       display: flex;
-      justify-content: center;
+      justify-content: space-evenly;
+      // overflow-y: scroll;
+      margin-top: 20px;
     }
 }
 .your-order{
@@ -2556,6 +2580,43 @@ justify-content: space-between;
     top: 4%;
   }
 }
+.your-order-opacity{
+  opacity: 0.2;
+}
+.loading-cook{
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 6;
+  width: 70%;
+  height: 160px;
+  @media screen and (min-width: 800px) {
+    height: 190px;
+    width: 50%;
+  }
+  &__item{
+    background: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: brightness(90%);
+    border-radius: 12px;
+    height: 220px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    flex-direction: column;
+    color: #e2a32b;
+    font-size: 20px;
+    @media screen and (min-width: 800px) {
+      height: 190px;
+    }
+  }
+  &__picture{
+    width: 120px;
+    height: 120px;
+    animation: loading-cooking 3s infinite;
+  }
+}
 //loading css
 // .lds-roller {
 //   display: inline-block;
@@ -2633,6 +2694,40 @@ justify-content: space-between;
 //   top: 56px;
 //   left: 12px;
 // }
+@keyframes loading-cooking {
+  0% {
+    -webkit-transform: rotate3d(0, 0, 1, 0deg);
+    transform: rotate3d(0, 0, 1, 40deg);
+  }
+  20% {
+    -webkit-transform: rotate3d(0, 0, 1, 90deg);
+    transform: rotate3d(0, 0, 1, 0deg);
+  }
+  40% {
+    -webkit-transform: rotate3d(0, 0, 1, 180deg);
+    transform: rotate3d(0, 0, 1, 40deg);
+  }
+  60% {
+    -webkit-transform: rotate3d(0, 0, 1, 180deg);
+    transform: rotate3d(0, 0, 1, 0deg);
+  }
+  80% {
+    -webkit-transform: rotate3d(0, 0, 1, 180deg);
+    transform: rotate3d(0, 0, 1, -40deg);
+  }
+  100% {
+    -webkit-transform: rotate3d(0, 0, 1, 180deg);
+    transform: rotate3d(0, 0, 1, 40deg);
+  }
+  // 75% {
+  //   -webkit-transform: rotate3d(0, 0, 1, 270deg);
+  //   transform: rotate3d(0, 0, 1, 0deg);
+  // }
+  // 100% {
+  //   -webkit-transform: rotate3d(0, 0, 1, 360deg);
+  //   transform: rotate3d(0, 0, 1, 0deg);
+  // }
+}
 @keyframes profile-height{
   0%{
     height: 50px;
