--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -474,9 +474,9 @@ html{
 .order{
   display: flex;
   flex-direction: row;
-  margin: 10px 0px;
+  margin: 5px 0px;
   border-bottom: 2px solid #eaeaea;
-  padding: 0px 0px 8px 0px;
+  padding: 20px 0px 20px 0px;
   animation: order-height 0.5s ease-in;
   // &__change-status{
   //   background: #c9c8c848;
@@ -492,6 +492,8 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
+    // box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
     @media screen and (min-width: 800px) {
   
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
@@ -508,6 +510,7 @@ html{
     }
     &--info{
       font-weight: 300;
+      padding-left: 8px;
     }
     &--header{
       text-align: right;
@@ -1010,6 +1013,7 @@ html{
   background: #f2f2f2;
   border-radius: 12px;
   margin-top: 20px;
+  height: 170px;
   @media screen and (min-width: 800px) {
     height: 200px;
   }
@@ -1057,7 +1061,7 @@ html{
   padding-left: 8px;
 }
 .header-menu{
-  margin: 20px 0px;
+  margin: 30px 0px;
   display: flex;
   flex-direction: row;
   font-size: 26px;
@@ -1386,14 +1390,18 @@ html{
   width: 80%;
   border-radius: 10px;
   position:fixed;
-  // top: 20%;
+  
   left: 50%;
   transform: translate(-50%,-70%);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   padding: 10px;
+  @media screen and (max-width: 800px) {
+
+    top: 60%;
+  }
   @media screen and (min-width: 800px) {
     width: 50%;
-  
+    top: 40%;
   }
 
 }
@@ -1469,7 +1477,7 @@ html{
 .header{
   font-size: 26px;
   font-weight:bold;
-  margin: 20px 0px;
+  margin: 30px 0px;
   @media screen and (min-width: 800px) {
     margin: 40px 0px;
     }
@@ -2176,6 +2184,7 @@ margin-bottom: 20px;
   padding: 0px 8px;
   &__text{
     border-top: 1px solid #7070702a;
+    padding: 10px 0px;
   }
 }
 .delivery-time-container{
@@ -2241,7 +2250,7 @@ margin-bottom: 20px;
   color: white;
 
   width: 300px;
-  height: 30%;
+  height: 35%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -2270,7 +2279,7 @@ margin-bottom: 20px;
   }
   &__header{
     font-weight: 700;
-    font-size: 24px;
+    font-size: 20px;
     text-align: center;
     // color: ;
   }
@@ -2278,6 +2287,7 @@ margin-bottom: 20px;
     text-align: left;
     text-align: center;
     font-size: 16px;
+    padding-top: 4px;
     @media screen and (min-width:800px) {
       padding: 6px;
       font-size: 18px;
